--- a/ch09/test_TensorFlow.ipynb
+++ b/ch09/test_TensorFlow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/yuko/.python3-6-7-venv/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "# 計算グラフを作る\n",
     "x = tf.Variable(3, name=\"x\")\n",
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +129,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 作成したノードは自動的にデフォルトグラフに追加される\n",
+    "x1 = tf.Variable(1)\n",
+    "\n",
+    "# 複数のグラフを作る場合には、以下のように新しい Graph を作れば良い\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "    x2 = tf.Variable(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 確認\n",
+    "x1.graph is tf.get_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2.graph is graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2.graph is tf.get_default_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TensorFlow は自動的にノードの依存関係を判断してくれる\n",
+    "w = tf.constant(3)\n",
+    "x = w + 2\n",
+    "y = x + 5\n",
+    "z = y * 3\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    # w と x は自動的に評価され、最後に y が計算される\n",
+    "    print(y.eval())\n",
+    "    # w と x の評価結果は再利用されず、再度計算される\n",
+    "    print(z.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# w と x を2回評価するのは非効率なので、1回の実行で y と z が同時に評価されるようにする\n",
+    "with tf.Session() as sess:\n",
+    "    y_val, z_val = sess.run([y, z])\n",
+    "    print(y_val)\n",
+    "    print(z_val)"
+   ]
   }
  ],
  "metadata": {
