--- a/ch09/test_TensorFlow.ipynb
+++ b/ch09/test_TensorFlow.ipynb
@@ -1,30 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.1 インストール\n",
+    "```bash\n",
+    "$ pip install tensorflow\n",
+    "$ pip install tensorflow-gpu\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.2 最初のグラフの作成とセッション内での実行\n",
+    "TensorFlow では以下のような流れで計算を実行する．\n",
+    "- 1. 計算グラフの構築\n",
+    "- 2. セッションを開き計算を行う  \n",
+    "  \n",
+    "計算グラフを構築するだけでは変数の初期化さえ行われていない．セッションを開きオペレーションを CPU や GPU に載せて変数値を保持し計算を行う．"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/yuko/.python3-6-7-venv/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
-     ]
-    }
-   ],
-   "source": [
+    "import tensorflow as tf\n",
     "# 計算グラフを作る\n",
     "x = tf.Variable(3, name=\"x\")\n",
     "y = tf.Variable(4, name=\"y\")\n",
@@ -33,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +62,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with ブロックでセッションを開いて実行すれば，最後にセッションを閉じる必要はない．  \n",
+    "また，sess.run(f) と f.eval() は同じで計算の実行を担っている．"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +94,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tf.global_variables_initializer() を使えば変数を一括して初期化できる．  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -94,13 +114,20 @@
     }
    ],
    "source": [
-    "# global_variables_initializer() 関数で一括して初期化できる\n",
+    "# global_variables_initializer() のインスタンスを作成\n",
     "init = tf.global_variables_initializer()\n",
     "with tf.Session() as sess:\n",
     "    init.run()  # すべての変数を初期化\n",
     "    result = f.eval()\n",
     "    \n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tf.InteractiveSession() で自動的にデフォルトセッションを呼び出せるが，最後はマニュアルで close する必要がある．"
    ]
   },
   {
@@ -128,84 +155,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 作成したノードは自動的にデフォルトグラフに追加される\n",
+    "## 9.3 グラフの管理\n",
+    "作成したノードは自動的にデフォルトグラフに追加される．  \n",
+    "複数の計算グラフを管理する場合には，tf.Graph() を呼び出して新しいグラフを作り，with ブロックで一時的にデフォルトグラフに設定する． "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
     "x1 = tf.Variable(1)\n",
+    "print(x1.graph is tf.get_default_graph())\n",
     "\n",
     "# 複数のグラフを作る場合には、以下のように新しい Graph を作れば良い\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
-    "    x2 = tf.Variable(2)"
+    "    x2 = tf.Variable(2)\n",
+    "print(x2.graph is graph)\n",
+    "print(x2.graph is tf.get_default_graph())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# 確認\n",
-    "x1.graph is tf.get_default_graph()"
+    "tf.reset_default_graph() を呼び出せばデフォルトグラフをリセットできる．"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "x2.graph is graph"
+    "## 9.4 ノードの値のライフサイクル\n",
+    "すべてのノードの値はグラフを実行するたびに破棄される．したがって，下記のようなコードでは w と x はそれぞれ2回ずつ計算されることになる．"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x2.graph is tf.get_default_graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +234,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上のような計算方法では w と x を2回評価するため非効率．下記のように変更することで1回の実行で y と z が同時に評価される．"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
